// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine edge md exist, no schema file: listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.two.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine edge md exist, no schema file: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": 1593699110538,
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": 1593699110538,
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": 1593699110539,
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": 1593699110539,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110539,
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": 1593699110539,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110540,
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": 1593699110540,
  },
]
`;

exports[`engine edge no md file, no schema : listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.two.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine edge no md file, no schema : main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": 1593699110560,
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": 1593699110560,
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": 1593699110561,
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": 1593699110561,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110562,
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": 1593699110562,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110562,
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": 1593699110562,
  },
]
`;

exports[`engine edge no md file, schema exist: fooNote 1`] = `
Object {
  "body": "",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "created": 1593699110551,
  "data": Object {
    "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
  },
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
  "updated": 1593699110551,
}
`;

exports[`engine edge no md file, schema exist: listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine edge no md file, schema exist: main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": 1593699110548,
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": 1593699110548,
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": 1593699110551,
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": 1593699110551,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110551,
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": 1593699110551,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110551,
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": 1593699110551,
  },
]
`;

exports[`engine edge note without fm: fooNote 1`] = `
Object {
  "body": "this is foo",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "created": 1593699110580,
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
  "updated": 1593699110580,
}
`;

exports[`engine edge note without id: fooNote 1`] = `
Object {
  "body": "this is foo
",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "created": 1593699110571,
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
  "updated": 1593699110571,
}
`;

exports[`engine main delete node with children: listDi2 1`] = `
Array [
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine main delete node with children: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": 1593699110523,
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": 1593699110523,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110524,
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": 1593699110523,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110524,
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": 1593699110524,
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": 1593699110526,
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": true,
    "title": "foo",
    "type": "note",
    "updated": 1593699110526,
  },
]
`;

exports[`engine main delete node with children: main2 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": 1593699110523,
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": 1593699110523,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110524,
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": 1593699110523,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110524,
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": 1593699110524,
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": 1593699110526,
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": true,
    "title": "foo",
    "type": "note",
    "updated": 1593699110526,
  },
]
`;

exports[`engine main open stub node: listDir 1`] = `
Array [
  "bar.two.md",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine main open stub node: listDir2 1`] = `
Array [
  "bar.two.md",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine main open stub node: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "bar",
    ],
    "created": 1593699110493,
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": 1593699110493,
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": 1593699110494,
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": 1593699110494,
  },
  Object {
    "body": "",
    "children": Array [
      "bar.two",
    ],
    "created": 1593699110495,
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "bar",
    "type": "note",
    "updated": 1593699110495,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110495,
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": 1593699110495,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110496,
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": 1593699110496,
  },
  Object {
    "body": "bar.two.body
",
    "children": Array [],
    "created": 1593699110494,
    "data": Object {},
    "desc": "",
    "fname": "bar.two",
    "parent": "bar",
    "stub": false,
    "title": "bar.two",
    "type": "note",
    "updated": 1593699110494,
  },
]
`;

exports[`engine main sanity: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": 1593699110468,
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": 1593699110468,
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": 1593699110469,
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": 1593699110469,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110470,
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": 1593699110470,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110470,
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": 1593699110470,
  },
]
`;
